some media for table

--- a/liquidity.html
+++ b/liquidity.html
@@ -269,7 +269,7 @@
             <tr>
               <th class="th-sm text-center">LP</th>
               <th class="th-sm">Daily Output</th>
-              <th class="th-sm">Monthly output</th>
+              <th class="th-sm monthly-output-th">Monthly output</th>
               <th class="th-sm"> Value Locked</th>
               <th class="th-sm">APR</th>
               <th class="th-sm">Your Reward</th>
@@ -287,7 +287,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0xfbe7b74623e4be82279027a286fa3a5b5280f77c.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> HBTC/USDT</span>
                   </div>
                 </div>
@@ -333,7 +333,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x78c90d3f8a64474982417cdb490e840c01e516d4.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> ETH/USDT</span>
                   </div>
                 </div>
@@ -379,7 +379,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x793c2a814e23ee38ab46412be65e94fe47d4b397.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> ETH/HBTC</span>
                   </div>
                 </div>
@@ -425,7 +425,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x499b6e03749b4baf95f9e70eed5355b138ea6c31.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> WHT/USDT</span>
                   </div>
                 </div>
@@ -471,7 +471,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0xdff86b408284dff30a7cad7688fedb465734501c.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> HUSD/USDT</span>
                   </div>
                 </div>
@@ -517,7 +517,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x615e6285c5944540fd8bd921c9c8c56739fd1e13.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> MDX/USDT</span>
                   </div>
                 </div>
@@ -563,7 +563,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x600072af0470d9ed1d83885d03d17368943ff22a.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> HFIL/USDT</span>
                   </div>
                 </div>
@@ -609,7 +609,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x6dd2993b50b365c707718b0807fc4e344c072ec2.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> MDX/WHT</span>
                   </div>
                 </div>
@@ -655,7 +655,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x3d415085381fd8fced8c6b19b2605ede9c231eb5.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> NT/USDT</span>
                   </div>
                 </div>
@@ -701,7 +701,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x060b4bfce16d15a943ec83c56c87940613e162eb.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> HLTC/USDT</span>
                   </div>
                 </div>
@@ -747,7 +747,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x5484ab0df3e51187f83f7f6b1a13f7a7ee98c368.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> HDOT/USDT</span>
                   </div>
                 </div>
@@ -793,7 +793,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x84455d880af684eb29997b82832dd71ef29c1354.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> UNI/USDT</span>
                   </div>
                 </div>
@@ -839,7 +839,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0xad67dd95926bd56094908917fa44529933b6f831.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> DOGE/USDT</span>
                   </div>
                 </div>
@@ -885,7 +885,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x1f0ec8e0096e145f2bf2cb4950ed7b52d1cbd35f.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> HBCH/USDT</span>
                   </div>
                 </div>
@@ -931,7 +931,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x2fb4be0f2785bd6009a383f3290cc97a4e3bd46b.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> MDX/HBTC</span>
                   </div>
                 </div>
@@ -977,7 +977,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0xb55569893b397324c0d048c9709f40c23445540e.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> MDX/ETH</span>
                   </div>
                 </div>
@@ -1023,7 +1023,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x3f57530bdba9bcd703c8ba75c57cf7de52014036.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> COW/USDT</span>
                   </div>
                 </div>
@@ -1069,7 +1069,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x52a342015baa2496a90a9bb6069d7692564132e6.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> LINK/USDT</span>
                   </div>
                 </div>
@@ -1115,7 +1115,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x2eab1e47bf1660bf6de9437bd061db666111e041.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> WAR/USDT</span>
                   </div>
                 </div>
@@ -1161,7 +1161,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x76bd054865c8b43d3433b51b29c7fc87f88bb1d2.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> BNB/WHT</span>
                   </div>
                 </div>
@@ -1207,7 +1207,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0xc7a4c808a29fc8cd3a8a6848f7f18bed9924c692.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> SNX/USDT</span>
                   </div>
                 </div>
@@ -1253,7 +1253,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x18b83288237fce1c44f332ed6ca851584f66e2a4.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> MKR/USDT</span>
                   </div>
                 </div>
@@ -1299,7 +1299,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x78b3c20c56d4b3ef133fd4f00a0293c10b380e40.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> COMP/USDT</span>
                   </div>
                 </div>
@@ -1345,7 +1345,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0xfafeaafefc5f92f22415506e78d9ab1e33c03257.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> AAVE/USDT</span>
                   </div>
                 </div>
@@ -1391,7 +1391,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x1986309ec4f23883ea4a407c38ca161c526b9a08.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> HBCH/MDX</span>
                   </div>
                 </div>
@@ -1437,7 +1437,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x8d0e7bcf9cf3b5b3face8c440b3c71c6cd5dbbc9.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> ADA/USDT</span>
                   </div>
                 </div>
@@ -1483,7 +1483,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0xf37de9f4e1a0a58f839dba868e76b5779109c2a4.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> USDC/USDT</span>
                   </div>
                 </div>
@@ -1529,7 +1529,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x7072bc4ffa57d310191aa6bc7e93bc5e5fceb738.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> DAI/USDT</span>
                   </div>
                 </div>
@@ -1575,7 +1575,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x4bb6826e1db889ae30657fa19e1a80d9ae332da5.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> EOS/USDT</span>
                   </div>
                 </div>
@@ -1621,7 +1621,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x9dbe263c92faaec700980089e73d2764614ed8ee.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> XRP/USDT</span>
                   </div>
                 </div>
@@ -1667,7 +1667,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x2b2d172117358f6306f34a8cfebc3d2fac7c2e38.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> HBELT/WHT</span>
                   </div>
                 </div>
@@ -1713,7 +1713,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x499b6e03749b4baf95f9e70eed5355b138ea6c31.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> WHT/USDT</span>
                   </div>
                 </div>
@@ -1765,7 +1765,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0x78c90d3f8a64474982417cdb490e840c01e516d4.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> ETH/USDT</span>
                   </div>
                 </div>
@@ -1817,7 +1817,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0xbebb01b1b126683bfe67607b24a803754de9a6fe.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> CON/USDT</span>
                   </div>
                 </div>
@@ -1869,7 +1869,7 @@
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
-                  <div class="Trades-one">
+                  <div class="trades-one">
                     <img src="https://mdex.co/token-icons/heco/lp/0xc95239fe2baabdbd15eec26805156e219b12ffce.png"><span class="td-span numbers SemiBold" style="margin-left: 10px;"> DEP/HUSD</span>
                   </div>
                 </div>
