fix processing/over swich

--- a/liquidity.html
+++ b/liquidity.html
@@ -221,7 +221,7 @@
 
         <li class="switch-wrapper">
           <div class="custom-control custom-switch" data-toggle="tooltip" data-placement="top" title="Click to view the completed pools">
-            <input type="checkbox" class="custom-control-input" name="pos" value="0.00" id="customSwitch1">
+            <input type="checkbox" class="custom-control-input" checked name="pos" value="0.00" id="customSwitch1">
             <label class="custom-control-label" for="customSwitch1">Processing</label> <span class="tooltip-button">
                   <img src="img/icon/home-page/home-assets/tooltip-icon.png" alt="" class="">
                 </span>
