fix table media thead

--- a/liquidity.html
+++ b/liquidity.html
@@ -267,13 +267,13 @@
           <table id="example" class="table-liquidity table table-hover table-sm" cellspacing="0" width="100%">
             <thead>
             <tr>
-              <th class="th-sm text-center">LP</th>
-              <th class="th-sm">Daily Output</th>
-              <th class="th-sm monthly-output-th">Monthly output</th>
-              <th class="th-sm"> Value Locked</th>
-              <th class="th-sm">APR</th>
-              <th class="th-sm">Your Reward</th>
-              <th class="th-sm"></th>
+              <th class="th-sm el-table_1_column_1 text-center">LP</th>
+              <th class="th-sm el-table_1_column_2"><span>Daily Output</span></th>
+              <th class="th-sm el-table_1_column_3 monthly-output-th">Monthly output</th>
+              <th class="th-sm el-table_1_column_4"> Value Locked</th>
+              <th class="th-sm el-table_1_column_5">APR</th>
+              <th class="th-sm el-table_1_column_6"><span>Your Reward</span></th>
+              <th class="th-sm el-table_1_column_7"></th>
             </tr>
             </thead>
             <tbody>
