fix media table all

--- a/liquidity.html
+++ b/liquidity.html
@@ -219,6 +219,8 @@
           <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false"> Innovation </a>
         </li>
 
+        <li class="nav-item brake"></li>
+
         <li class="switch-wrapper">
           <div class="custom-control custom-switch" data-toggle="tooltip" data-placement="top" title="Click to view the completed pools">
             <input type="checkbox" class="custom-control-input" checked name="pos" value="0.00" id="customSwitch1">
@@ -228,7 +230,7 @@
           </div>
         </li>
 
-        <li>
+        <li class="checkbox-wrapper">
           <div class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" name="pos" value="88" id="customCheck1">
             <label class="custom-control-label" for="customCheck1">Staked only</label>
