fix multiple count animation

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <div class="home-assets-amount d-flex flex-wrap align-items-center justify-content-center">
             <span class="amount-icon order-1"></span>
             <span class="text order-2">Total Value Locked</span>
-            <span id="countElement" class="amount-number order-lg-3 order-md-4 order-sm-4 order-4">2,576,778,101.66</span>
+            <span class="count-number amount-number order-lg-3 order-md-4 order-sm-4 order-4">2576778101.66</span>
             <span class="amount-unit order-3">(USDT)</span>
         </div>
 
@@ -877,7 +877,8 @@
   </footer>
 
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script type="module" src="assets/js/countUp.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/1.8.5/countUp.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.1/js/jquery.dataTables.min.js"></script>
     <script type="module" src="assets/js/starter.js"></script>
   </body>
 </html>
