--- a/liquidity.html
+++ b/liquidity.html
@@ -195,7 +195,7 @@
     <h1 class="banner-title text-center text-white">Earn MDX By Staking LP &amp; Tokens</h1>
 
     <div class="text-center">
-      <p class="liquidity-mdx"> Current TVL <span>1,409,313,279.39</span>USDT</p>
+      <p class="liquidity-mdx"> Current TVL <span class="count-number">1409313279.39</span>USDT</p>
     </div>
 
   </div>
@@ -290,12 +290,12 @@
               </td>
               <td rowspan="1" colspan="1" class="el-table_1_column_2">
                 <div class="cell">
-                  <span class="td-span"><span >57,202.10</span> MDX </span>
+                  <span class="td-span"><span class="count-number">57202.10</span> MDX </span>
                 </div>
               </td>
               <td rowspan="1" colspan="1" class="el-table_1_column_3">
                 <div class="cell">
-                  <span class="td-span"><span >1,716,062.98</span> MDX </span>
+                  <span class="td-span"><span class="count-number">1716062.98</span> MDX </span>
                 </div>
               </td>
               <td rowspan="1" colspan="1" class="el-table_1_column_4">
@@ -336,7 +336,7 @@
               </td>
               <td rowspan="1" colspan="1" class="el-table_1_column_2">
                 <div class="cell">
-                  <span class="td-span"><span >55,634.92</span> MDX </span>
+                  <span class="td-span"><span class="count-number">55634.92</span> MDX </span>
                 </div>
               </td>
               <td rowspan="1" colspan="1" class="el-table_1_column_3">
@@ -2101,9 +2101,8 @@
 </footer>
 
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/1.8.5/countUp.min.js"></script>
 <script src="https://cdn.datatables.net/1.11.1/js/jquery.dataTables.min.js"></script>
-
-<script type="module" src="assets/js/countUp.min.js"></script>
 <script type="module" src="assets/js/starter.js"></script>
 </body>
 </html>
