--- a/bridge.html
+++ b/bridge.html
@@ -576,8 +576,8 @@
 <!---->
 
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/1.8.5/countUp.min.js"></script>
 <script src="https://cdn.datatables.net/1.11.1/js/jquery.dataTables.min.js"></script>
-<script type="module" src="assets/js/countUp.min.js"></script>
 <script type="module" src="assets/js/starter.js"></script>
 </body>
 </html>
