--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             <a class="nav-link" href="#">DAO</a>
           </li>
 
+          <li class="nav-item desktop-item">
+            <a class="nav-link" href="#">IMO</a>
+          </li>
+
           <li class="nav-item dropdown">
             <a class="btn btn-success btn-rounded btn-heco dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               HECO
@@ -178,13 +182,11 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">
                 <img src="img/icon/close-modal-icon.png" class="close-icon">
               </span>
             </button>
-
           </div>
           <div class="modal-body">
             <div class="select-language d-flex flex-wrap">
