fix headers all pages

--- a/liquidity.html
+++ b/liquidity.html
@@ -14,9 +14,12 @@
   <nav class="navbar justify-content-start navbar-dark navbar-expand-xl">
 
     <a href="#" class="burger-btn navbar-toggler" data-toggle="modal" data-target="#slidePanel">
-      <img src="img/icon/header/burger-icon.png" alt=""> </a>
+      <img src="img/icon/header/burger-icon.png" alt="">
+    </a>
 
-    <a class="navbar-brand" href="#"> <img src="img/main-logo.png"> </a>
+    <a class="navbar-brand" href="#">
+      <img src="img/main-logo.png">
+    </a>
 
     <ul class="navbar-nav flex-row justify-content-between align-items-center">
       <li class="nav-item active desktop-item">
@@ -50,10 +53,17 @@
         <a class="nav-link" href="#">DAO</a>
       </li>
 
+      <li class="nav-item desktop-item">
+        <a class="nav-link" href="#">IMO</a>
+      </li>
+
       <li class="nav-item dropdown">
-        <a class="btn btn-success btn-rounded btn-heco dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> HECO </a>
+        <a class="btn btn-success btn-rounded btn-heco dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          HECO
+        </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">ETH</a> <a class="dropdown-item" href="#">BSC</a>
+          <a class="dropdown-item" href="#">ETH</a>
+          <a class="dropdown-item" href="#">BSC</a>
           <a class="dropdown-item active" href="#">HECO</a>
         </div>
       </li>
@@ -64,7 +74,8 @@
 
       <li class="nav-item lang_bar desktop-item d-flex align-items-center flex-shrink-0 dropdown dropleft">
         <a class="lang-bar-button" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img src="img/btn-dropdown-dots.png" alt=""> </a>
+          <img src="img/btn-dropdown-dots.png" alt="">
+        </a>
 
         <div class="lang-bar-dropdown dropdown-menu" aria-labelledby="dropdownMenuLink">
           <a class="dropdown-item" href="#"><img src="img/news-icon.png" alt="">News</a>
@@ -74,7 +85,8 @@
       </li>
 
       <a href="#" class="config-btn btn btn-light" data-toggle="modal" data-target="#modalLang">
-        <img src="img/icon/header/config-button-icon.png" alt=""> </a>
+        <img src="img/icon/header/config-button-icon.png" alt="">
+      </a>
     </ul>
   </nav>
 </header>
@@ -86,22 +98,26 @@
       <div class="modal-body">
         <div class="header d-flex justify-content-around">
           <div class="item">
-            <a href="#" target="_blank"> <img src="img/icon/header/slide-out-panel/referral-system-icon.png" alt="">
+            <a href="#" target="_blank">
+              <img src="img/icon/header/slide-out-panel/referral-system-icon.png" alt="">
               <p>Referral System</p>
             </a>
           </div>
           <div class="item">
-            <a href="#" target="_blank"> <img src="img/icon/header/slide-out-panel/bridge-icon.png" alt="">
+            <a href="#" target="_blank">
+              <img src="img/icon/header/slide-out-panel/bridge-icon.png" alt="">
               <p>Bridge</p>
             </a>
           </div>
           <div class="item">
-            <a href="#" target="_blank"> <img src="img/icon/header/slide-out-panel/repurchase-burn-icon.png" alt="">
+            <a href="#" target="_blank">
+              <img src="img/icon/header/slide-out-panel/repurchase-burn-icon.png" alt="">
               <p>Repurchase &amp; Burn</p>
             </a>
           </div>
           <div class="item">
-            <a href="#" target="_blank"> <img src="img/icon/header/slide-out-panel/dao-icon.png" alt="">
+            <a href="#" target="_blank">
+              <img src="img/icon/header/slide-out-panel/dao-icon.png" alt="">
               <p>DAO</p>
             </a>
           </div>
@@ -109,37 +125,51 @@
 
         <ul class="content">
           <li class="item">
-            <a href="#"> <img src="img/icon/header/slide-out-panel/main/faq-aside-icon.png" alt=""> <span>FAQ</span>
+            <a href="#">
+              <img src="img/icon/header/slide-out-panel/main/faq-aside-icon.png" alt="">
+              <span>FAQ</span>
             </a>
           </li>
 
           <li class="item">
-            <a href="#"> <img src="img/icon/header/slide-out-panel/main/info-aside-icon.png" alt=""> <span>Info</span>
+            <a href="#">
+              <img src="img/icon/header/slide-out-panel/main/info-aside-icon.png" alt="">
+              <span>Info</span>
             </a>
           </li>
 
           <li class="item">
-            <a href="#"> <img src="img/icon/header/slide-out-panel/main/listing-token-aside-icon.png" alt="">
-              <span>Listing Token</span> </a>
+            <a href="#">
+              <img src="img/icon/header/slide-out-panel/main/listing-token-aside-icon.png" alt="">
+              <span>Listing Token</span>
+            </a>
           </li>
 
           <li class="item">
-            <a href="#"> <img src="img/icon/header/slide-out-panel/main/bug-bounty-aside-icon.png" alt="">
-              <span>Bug Bounty Campaign</span> </a>
+            <a href="#">
+              <img src="img/icon/header/slide-out-panel/main/bug-bounty-aside-icon.png" alt="">
+              <span>Bug Bounty Campaign</span>
+            </a>
           </li>
 
           <li class="item">
-            <a href="#"> <img src="img/icon/header/slide-out-panel/main/liquidity-aside-icon.png" alt="">
-              <span>Liquidity Mining Whitelist</span> </a>
+            <a href="#">
+              <img src="img/icon/header/slide-out-panel/main/liquidity-aside-icon.png" alt="">
+              <span>Liquidity Mining Whitelist</span>
+            </a>
           </li>
 
           <li class="item">
-            <a href="#"> <img src="img/icon/header/slide-out-panel/main/mdex-aside-icon.png" alt="">
-              <span>MDEX Ecological Fund Application</span> </a>
+            <a href="#">
+              <img src="img/icon/header/slide-out-panel/main/mdex-aside-icon.png" alt="">
+              <span>MDEX Ecological Fund Application</span>
+            </a>
           </li>
 
           <li class="item">
-            <a href="#"> <img src="img/icon/header/slide-out-panel/main/news-aside-icon.png" alt=""> <span>News</span>
+            <a href="#">
+              <img src="img/icon/header/slide-out-panel/main/news-aside-icon.png" alt="">
+              <span>News</span>
             </a>
           </li>
         </ul>
@@ -149,17 +179,15 @@
 </div>
 
 <!-- Modal Lang-->
-<div class="modal fade" id="modalLang" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="modalLang" tabindex="-1"  aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">
                 <img src="img/icon/close-modal-icon.png" class="close-icon">
               </span>
         </button>
-
       </div>
       <div class="modal-body">
         <div class="select-language d-flex flex-wrap">
@@ -187,6 +215,7 @@
     </div>
   </div>
 </div>
+<!---->
 
 
 <section class="banner-bar">
