fix footer styles

--- a/bridge.html
+++ b/bridge.html
@@ -389,7 +389,6 @@
 <footer class="footer-desktop">
   <div class="container">
     <div class="row">
-
       <div class="col-3 d-flex flex-column">
 
         <a href="#" class="logo-footer"><img src="img/icon/footer/mdex-footer-icon.png" alt=""></a>
@@ -421,40 +420,33 @@
       <div class="col-3">
         <div class="text-link">
           <h3 class="footer-title">Application</h3>
-
           <ul>
-            <li>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSem595jWpO5_A5fRj9W4-wX_3mg3ypqqNiXcC_yi-tpcbOaqA/viewform" target="_blank">Listing Token</a>
-            </li>
-            <li>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSem595jWpO5_A5fRj9W4-wX_3mg3ypqqNiXcC_yi-tpcbOaqA/viewform" target="_blank">Liquidity Mining Whitelist</a>
-            </li>
-            <li><a href="https://forms.gle/b6SCc4cXzn7apFhk7" target="_blank">IMO Application</a></li>
-            <li>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSdn9wYhf_jI01nNORQXWgiyGSPKcVTP4fCq2cLYBxINd35vuw/viewform" target="_blank">MDEX Ecological Fund Application</a>
-            </li>
+            <li><a href="#" target="_blank">Listing Token</a></li>
+            <li><a href="#" target="_blank">Liquidity Mining Whitelist</a></li>
+            <li><a href="h#" target="_blank">IMO Application</a></li>
+            <li><a href="#" target="_blank">MDEX Ecological Fund Application</a></li>
           </ul>
         </div>
       </div>
       <div class="col-2">
-        <div class="text-link">
+        <div  class="text-link">
           <h3 class="footer-title">Guide</h3>
           <ul>
-            <li><a href="https://ht.mdex.co/#/swap?lang=en" target="_blank">Swap</a></li>
-            <li><a href="https://ht.mdex.co/#/pool?lang=en" target="_blank">Pool</a></li>
-            <li><a href="https://info.mdex.co/" target="_blank">Info</a></li>
-            <li><a href="https://info.mdex.co/" target="_blank">Liquidity</a></li>
-            <li><a href="https://info.mdex.co/" target="_blank">Boardroom</a></li>
-            <li><a href="https://info.mdex.co/" target="_blank">Trading</a></li>
+            <li><a href="#" target="_blank">Swap</a></li>
+            <li><a href="#" target="_blank">Pool</a></li>
+            <li><a href="#" target="_blank">Info</a></li>
+            <li><a href="#" target="_blank">Liquidity</a></li>
+            <li><a href="#" target="_blank">Boardroom</a></li>
+            <li><a href="#" target="_blank">Trading</a></li>
           </ul>
         </div>
       </div>
       <div class="col-2">
-        <div class="text-link">
+        <div  class="text-link">
           <h3 class="footer-title">Doc</h3>
           <ul>
-            <li><a href="https://mdexdoc.gitbook.io/doc//faq" target="_blank">FAQ</a></li>
-            <li><a href="https://mdexdoc.gitbook.io/doc/yong-hu-zhi-nan" target="_blank">User Guide</a></li>
+            <li><a href="#" target="_blank">FAQ</a></li>
+            <li><a href="#" target="_blank">User Guide</a></li>
           </ul>
         </div>
       </div>
@@ -462,17 +454,14 @@
         <div class="text-link">
           <h3 class="footer-title">About</h3>
           <ul>
-            <li><a href="https://mdexdoc.gitbook.io/doc/gong-gao-1" target="_blank">Announcement</a></li>
-            <li>
-              <a href="https://mdexcom.zendesk.com/hc/en-gb/sections/360012110672-Adjustment-of-Pool" target="_blank">Adjustment of Pool</a>
-            </li>
+            <li><a href="#" target="_blank">Announcement</a></li>
+            <li><a href="#" target="_blank">Adjustment of Pool</a></li>
             <li><a href="#">Ecological Fund</a></li>
             <li><a href="#">Bug Bounty Campaign</a></li>
-            <li><a href="https://mdexdoc.gitbook.io/doc/lian-xi-wo-men" target="_blank">Contact us</a></li>
+            <li><a href="#" target="_blank">Contact us</a></li>
           </ul>
         </div>
       </div>
-
     </div>
   </div>
 </footer>
@@ -480,21 +469,34 @@
 <footer class="footer-mobile">
   <ul class="nav justify-content-center">
     <li class="nav-item">
-      <a class="nav-link active" href="#"> <span class="icon icon-home"></span> <span class="title-link">Home</span>
+      <a class="nav-link active" href="#">
+        <span class="icon icon-home"></span>
+        <span class="title-link">Home</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#"> <span class="icon icon-swap"></span> <span class="title-link">Swap</span> </a>
+      <a class="nav-link" href="#">
+        <span class="icon icon-swap"></span>
+        <span class="title-link">Swap</span>
+      </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#"> <span class="icon icon-farm"></span> <span class="title-link">Farm</span> </a>
+      <a class="nav-link" href="#">
+        <span class="icon icon-farm"></span>
+        <span class="title-link">Farm</span>
+      </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#"> <span class="icon icon-charts"></span> <span class="badge badge-success">Beta</span>
-        <span class="title-link">Charts</span> </a>
+      <a class="nav-link" href="#">
+        <span class="icon icon-charts"></span>
+        <span class="badge badge-success">Beta</span>
+        <span class="title-link">Charts</span>
+      </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#"> <span class="icon icon-boardroom"></span> <span class="title-link">Boardroom</span>
+      <a class="nav-link" href="#">
+        <span class="icon icon-boardroom"></span>
+        <span class="title-link">Boardroom</span>
       </a>
     </li>
   </ul>
